--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,13 @@
 }
 .header-list li {
     margin-right: 29px; 
-    align-items: center;
     color: var(--header-black-color);
 }
 .header {
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 93px; 
     background-color: var(--header-color); 
+   
 
 }
 .section-colorawe {
@@ -27,10 +25,12 @@
    color: rgb(238, 3, 3); 
    text-align: left;
    padding: 156px; 
-   
 }
 .header-list{
    display: flex;
+   margin-left: 420px;
+   font-size: 24px;
+
 }
 .header-button{
     color: var(--text-color);
@@ -43,5 +43,40 @@
     height: 67px;
 }
 .language{
-   color: var(--header-black-color);
+   color: var(--header-black-color)
 }
+.quality{
+   margin: 145px;
+   
+}
+.list-quality{
+   display: flex;
+   justify-content: space-between;
+}
+.line{
+   width: 1px;
+   height: 346px;
+   background: var(--header-black-color);
+}
+.container{
+   width: 508px;
+   height: 84px;
+}
+.colorawe-Nike{
+   font-size: 72px;
+}
+.text-colorawe{
+   font-size: 18px;
+   margin-bottom: 60px;
+}
+.h1-colorawe{
+   font-size: 144px;
+}
+.name-logo{
+   font-size: 48px;
+}
+
+
+
+
+
