--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,10 @@
 
 }
 .section-colorawe {
-   background-image: url(./images/fon-nike.jpg);
+   background-image: url(/images/fon-nike.jpg);
    background-size: cover; 
    background-position: center; 
-   color: rgb(238, 3, 3); 
+   color: var(--text-color); 
    text-align: left;
    padding: 156px; 
 }
@@ -30,7 +30,7 @@
    display: flex;
    margin-left: 420px;
    font-size: 24px;
-
+  margin-top: 25px;
 }
 .header-button{
     color: var(--text-color);
@@ -59,8 +59,9 @@
    background: var(--header-black-color);
 }
 .container{
-   width: 508px;
-   height: 84px;
+   width: 1200px;
+   margin: 0 auto;
+   padding: 0 15px;
 }
 .colorawe-Nike{
    font-size: 72px;
@@ -68,12 +69,24 @@
 .text-colorawe{
    font-size: 18px;
    margin-bottom: 60px;
+   width: 508px;
+   height: 84px;
 }
 .h1-colorawe{
    font-size: 144px;
 }
 .name-logo{
    font-size: 48px;
+}
+.logo{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+.section-quality{
+   background: url(/images/fon-premium.jpg);
+   background-size: cover; 
+   color: var(--text-color);
 }
 
 
