--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
     background-color: var(--header-color); 
    padding-top: 16px;
    padding-bottom: 16px;
+   font-family: 'Roboto', sans-serif;
 }
 .section-colorawe {
    background-image: url(../images/fon-nike.jpg);
@@ -38,6 +39,7 @@
     font-family: 'Roboto', sans-serif;
     width: 254px;
     height: 67px;
+    font-size: 24px;
 }
 .language{
    color: var(--header-black-color);
@@ -59,19 +61,25 @@
 }
 .colorawe-Nike{
    font-size: 72px;
+   font-family: 'Playfair Display', serif;
 }
 .text-colorawe{
    font-size: 18px;
    margin-bottom: 60px;
    width: 508px;
    height: 84px;
+   font-family: 'Roboto', sans-serif;
 }
 .h1-colorawe{
+   font-family: 'Playfair Display', serif;
    font-size: 144px;
-   font-family: 'Playfair Display', serif; 
+   font-style: normal;
+   font-weight: 400;
+   line-height: normal;
 }
 .name-logo{
    font-size: 48px;
+   font-family: 'PT Serif' serif;
 }
 .logo{
    display: flex;
@@ -145,28 +153,23 @@
    line-height: normal;
    font-weight: 400;
    width: 228px;
-   margin-left: 10px;
 }
 .reviews-time{
    font-size: 14px;
    color: var(--time-color);
    margin-top: 8px;
-   margin-left: 10px;
 }
 .reviews-name{
    font-size: 14px;
    color: var(--text-color);
-   margin-left: 10px;
 }
 .reviews-data{
    font-size: 12px;
    color: var(--time-color);
-   margin-left: 10px;
 }
-.reviews-flowers{
+.footer-colorawe{
 
 }
-
 
 
 
