--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,13 @@
     color: var(--text-color);
     background: var(--Buy-color);
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 10px;
     border: none;
     font-family: 'Roboto', sans-serif;
     width: 254px;
     height: 67px;
     font-size: 24px;
+    margin-top: 19px;
 }
 .language{
    color: var(--header-black-color);
@@ -200,9 +201,29 @@
    position: absolute;
    right: -0.5px; 
 }
-
-
-
-
-
-
+.input-item{
+   border-radius: 50px;
+   width: 580px;
+   height: 50px;
+}
+.form-order {
+   text-align: center;
+   display: block;
+}
+.input-big-item{
+   width: 690px;
+   height: 60px; 
+   border-radius: 50px;
+   width: 100%; 
+   box-sizing: border-box;
+   border: none;
+   margin-top: 19px;
+} 
+.input-item{
+   width: 580px;
+   height: 50px;
+   align-items: center;
+   border: none;
+   margin-top: 19px;
+  display: block;
+}
