--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
 }
 .list-quality{
    display: flex;
-   justify-content: space-between;
+   justify-content: center;
 }
 
 .container{
@@ -227,4 +227,15 @@ body{
    color: var(--text-color);
    font-size: 24px;
    margin-top: 19px;
+}
+.second{
+ padding-left: 95px;
+ padding-right: 95px;
+ margin-left: 50px;
+}
+.one{
+   margin-right: 50px;
+}
+.three{
+   margin-left: 50px;
 }
